[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pointers/PointerP2.gd" type="Script" id=1]
[ext_resource path="res://Pointers/p2cursor.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.3588, 92.1138 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 24 )

[node name="PointerP2" type="Node2D"]
position = Vector2( 0, -6 )
script = ExtResource( 1 )

[node name="SpriteP2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6.2251, -0.0907288 )
rotation = 0.331613
shape = SubResource( 1 )

[node name="PointerArea" type="Area2D" parent="."]

[node name="PointerCollision" type="CollisionShape2D" parent="PointerArea"]
position = Vector2( -0.5, 64 )
shape = SubResource( 2 )

[connection signal="texture_changed" from="SpriteP2" to="." method="_on_Sprite_texture_changed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
